[package]
name = "sndm"
version = "2.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.29.0", features = ["bundled", "chrono"]}
chrono = {version = "0.4", features = ["serde"]}
rocket = { version = "0.5.0-rc.3", features = ["json"] }
utoipa = { version = "3.3.0", features = ["rocket_extras", "chrono", "preserve_order"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["rocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "*"