[package]
name = "schiller-db"
description = "Schillernover's Database Management Software"
version = "4.1.0"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
repository = "https://github.com/nwrenger/schiller-db"
license = "MIT"

[[bin]]
name = "schiller-db"
path = "server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = "debuginfo"

[dependencies]
rusqlite = {version = "0.29.0", features = ["bundled", "chrono"]}
chrono = {version = "0.4", features = ["serde"]}
rocket = { version = "0.5.0-rc.3", features = ["json"] }
utoipa = { version = "3.3.0", features = ["rocket_extras", "chrono", "preserve_order"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["rocket", "debug-embed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"
dotenv = "0.15"
base64 = "0.21"
rand = "0.8"
sha2 = "0.10"
clap = { version = "4.3", features = ["derive"] }
